src/app/app.component.scss
:host {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  color: #333;
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 8px 0;
}

p {
  margin: 0;
}
.main{
  padding: 16px;
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
}
.column-container{
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  width: 100%;
  max-width: 600px;
}

.row-layout{
  display:flex;
  justify-content: flex-start;
  align-items: center;
  flex-wrap: wrap;
}
.inner-row-container{
  height: 100px;
  flex: 1 1 190px;
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items:center;
  border: 1px solid #87CEFA;
  border-radius: 8px;
  margin:4px;
}

.inner-row-container-header{
  height: 50px;
  display:flex;
  justify-content: flex-start;
  align-items:center;
  border-radius: 8px;
  margin:4px;
  font-weight: 700;
}


@media screen and (max-width: 760px){
  .row-layout{
    width: 100%;
    .inner-row-container{
      width: 100%;
    }
    .inner-row-container-header{
      width: 100%;
    }
  }
}

